--- a/css/homepage.css
+++ b/css/homepage.css
@@ -41,16 +41,20 @@ body {
   margin-right: 3em;
 }
 .navbar-container__secondaryBox--button {
-  padding: 1em;
+  padding: 13px;
   background-color: #ebe0d6;
   margin-right: 10%;
 }
-.navbar-container__secondaryBox--button img {
+.navbar-container__secondaryBox--button i {
   width: 1em;
   height: 1em;
 }
 .navbar-container__secondaryBox--button:hover {
   box-shadow: 0 0 5px 5px #b3b3b3;
+}
+
+.user-menu {
+  visibility: hidden;
 }
 
 .main-container {
@@ -255,17 +259,43 @@ body {
   border-radius: 50px;
   transition: 0.4s ease 0s;
 }
+.main-container__middleColumn--tertiaryBox div button a {
+  text-decoration: none;
+  color: white;
+}
 .main-container__middleColumn--tertiaryBox div button:hover {
   text-shadow: 0px 0px 6px #FFFFFF;
   box-shadow: 0px 5px 40px -10px #000000;
   transition: 0.4s ease 0s;
 }
 .main-container__rightColumn {
-  padding: 2em;
-  border: 2px solid grey;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 500px;
+  height: 820px;
+  overflow-y: scroll;
 }
-.main-container__rightColumn a {
-  text-transform: none;
+.main-container__rightColumn div {
+  padding: 10px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+.main-container__rightColumn div img {
+  width: 90px;
+  height: 90px;
+}
+.main-container__rightColumn div a {
+  color: black;
+  text-decoration: none;
+}
+.main-container__rightColumn div:hover {
+  background-color: grey;
+}
+.main-container__rightColumn div:hover a {
+  color: white;
+  font-weight: bold;
 }
 
-/*# sourceMappingURL=input.css.map */
+/*# sourceMappingURL=output.css.map */
