created community component, make every stylesheet responsive, fixed some bugs and a lot of features have been made

--- a/css/add-review.css
+++ b/css/add-review.css
@@ -64,6 +64,7 @@ body {
   background-color: #ebe0d6;
   color: grey;
   font-weight: 90;
+  margin-bottom: 7px;
   padding: 10px;
   text-transform: uppercase;
   border-radius: 6px;
