--- a/css/login.css
+++ b/css/login.css
@@ -19,6 +19,12 @@ body {
   font-size: 100px;
   text-shadow: 1px 1px grey;
 }
+.container__error-box {
+  visibility: hidden;
+  border: 2px solid red;
+  background-color: lightcoral;
+  margin: 2%;
+}
 .container__form {
   margin-left: 160px;
   background-color: #ffffff;
@@ -74,6 +80,84 @@ body {
 }
 .container__form--link-box a:hover {
   text-decoration: underline;
+}
+
+@media only screen and (max-width: 769px) {
+  .container {
+    width: 300px;
+    display: flex;
+    flex-direction: column;
+  }
+  .container__title-box--title {
+    color: #663300;
+    letter-spacing: 9px;
+    font-weight: bold;
+    font-family: Baskerville, "Baskerville Old Face", "Goudy Old Style", Garamond, "Times New Roman", serif;
+    font-size: 30px;
+    text-shadow: 1px 1px grey;
+  }
+  .container__error-box {
+    visibility: hidden;
+    border: 2px solid red;
+    background-color: lightcoral;
+    margin: 2%;
+  }
+  .container__form {
+    background-color: #ffffff;
+    padding: 30px;
+    width: 200px;
+    margin-left: 0;
+    display: flex;
+    flex-direction: column;
+    box-shadow: 0px 5px 40px -15px rgba(0, 0, 0, 0.57);
+  }
+  .container__form--input-box {
+    margin-top: 2%;
+  }
+  .container__form--input-box label {
+    letter-spacing: 3px;
+  }
+  .container__form--input-box input {
+    padding: 10px;
+    margin-top: 4%;
+    text-align: center;
+    background: #f2f2f2;
+  }
+  .container__form--input-box input:hover {
+    box-shadow: 0px 5px 40px -10px rgba(0, 0, 0, 0.57);
+    transition: all 0.3s ease 0s;
+  }
+  .container__form--bttn-box button {
+    margin-top: 4%;
+    margin-left: 27%;
+    background-color: #ebe0d6;
+    color: grey;
+    font-weight: 90;
+    padding: 10px;
+    text-transform: uppercase;
+    border-radius: 6px;
+    transition: 0.3s ease 0s;
+    text-transform: uppercase;
+  }
+  .container__form--bttn-box button:hover {
+    letter-spacing: 3px;
+    background-color: #ebe0d6;
+    color: white;
+    box-shadow: 0px 5px 40px -10px rgba(0, 0, 0, 0.57);
+    transition: all 0.3s ease 0s;
+  }
+  .container__form--link-box {
+    margin-top: 2%;
+    margin-left: 2.5px;
+    font-size: 15px;
+  }
+  .container__form--link-box a {
+    text-decoration: none;
+    color: #ce8181;
+  }
+  .container__form--link-box a:hover {
+    text-decoration: underline;
+  }
 }
 
 /*# sourceMappingURL=login.css.map */
